# an-ml-riddle

./: .gitignore  compile_flags.txt  meson.build  process.md  process2.md  process3.md
include/: meson.build
include/amrc/: encrypt.hxx  meson.build
include/amrs/: decrypt.hxx  meson.build
include/anmlriddle/: channel.h  com.h  compile_flags.txt  meson.build  multiplication_triplet.h  synchronised_queue.h  unexpected_message_error.h
include/anmlriddle/client/: compile_flags.txt  dense_layer.h  final_layer.h  inference.h  initial_layer.h  layer.h  meson.build  unexpected_message_error.h
include/anmlriddle/server/: inference.h  meson.build
schemas/: Model.capnp  client_message.fbs  common.fbs  meson.build  model.fbs  model_share.fbs  server_message.fbs  vector_share.fbs
scripts/an-ml-riddle-mnist/: Dockerfile  hatch_build.py  pyproject.toml  run.sh
scripts/an-ml-riddle-mnist/anmlriddle_mnist/: anmlriddle_mnist.py  dense.py  hatch_build.py  layer.py  model.py  relu.py  softmax.py  train.py  utils.py
scripts/an-ml-riddle-mnist/artifacts/: model.amrm
scripts/an-ml-riddle-mnist/delme/: pyproject.toml
scripts/an-ml-riddle-mnist/delme2/: Dockerfile  meson.build  meson2.build
scripts/an-ml-riddle-mnist/delme3/anmlriddle/: Dense.py  DenseLayer.py  Layer.py  LayerTable.py  MTInferenceShare.py  Matrix.py  Model.py
scripts/an-ml-riddle-mnist/schemas/: common.fbs  meson.build  model.fbs  server_message.fbs
scripts/mnist/: Dockerfile  com.py  dense.py  layer.py  model.py  relu.py  requirements.txt  run.sh  softmax.py  train.py
src/: compile_flags.txt  dense_layer.cc  dense_layer.h  generate_shares.cc  generate_shares.h  infer_layer.cc  infer_layer.h  meson.build  multiplication_triplet.cc  number.cxx  number.hxx  split_dense.h  split_vector.cc  split_vector.h
src/amrc/: encrypt.cxx  meson.build
src/amrs/: decrypt.cxx  meson.build
src/client/: dense_layer.cc  final_layer.cc  inference.cc  initial_layer.cc  layer.cc  meson.build
src/server/: compile_flags.txt  inference.cc  meson.build  split_model.cc  split_model.h
tests/: meson.build  round_trip.cxx
