[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anmlriddle-mnist"
description = 'Train a simple neural network that detects handwritten digits and export it to an-ml-riddle'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Amit Goren", email = "animalfarm@mailfence.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "flatbuffers ~= 23.5.26",
  "jax[cpu] ~= 0.4.0",
  "pyswarms ~= 1.3.0",
  "scikit-learn ~= 1.4.0",
  "numpy ~= 1.26.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/AmitDIRTYC0W/an-ml-riddle#readme"
Issues = "https://github.com/AmitDIRTYC0W/an-ml-riddle/issues"
Source = "https://github.com/AmitDIRTYC0W/an-ml-riddle/scripts/an-ml-riddle-mnist"

[project.scripts]
anmlriddle-mnist = "anmlriddle_mnist.anmlriddle_mnist:main"

[tool.hatch.version]
path = "anmlriddle_mnist/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=anmlriddle_mnist --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.hatch.build.hooks.custom]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "anmlriddle_mnist/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
