[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "anmlriddle-mnist"
version = "0.1.0"
description = 'Train a simple neural network that detects handwritten digits and export it to an-ml-riddle'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Amit Goren", email = "animalfarm@mailfence.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jax[cpu] ~= 0.4.0",
  "pyswarms ~= 1.3.0",
  "scikit-learn ~= 1.4.0",
  "numpy ~= 1.26.0"
]

[project.urls]
Documentation = "https://github.com/AmitDIRTYC0W/an-ml-riddle#readme"
Issues = "https://github.com/AmitDIRTYC0W/an-ml-riddle/issues"
Source = "https://github.com/AmitDIRTYC0W/an-ml-riddle/scripts/an-ml-riddle-mnist"

[project.scripts]
anmlriddle-mnist = "anmlriddle_mnist.anmlriddle_mnist:main"

